fixed uneven spacing in settings form

--- a/server/public/sass/profile.scss
+++ b/server/public/sass/profile.scss
@@ -8,3 +8,8 @@
 .account-form select {
   margin-right: 5px;
 }
+
+.control-label {
+  width: 100px;
+  flex-grow: 0;
+}
